fix: footer spacing

--- a/app/scss/ui/_components.footer.scss
+++ b/app/scss/ui/_components.footer.scss
@@ -14,6 +14,10 @@
   &__background svg {
     width: 100%;
     display: block;
+
+    @include at(md\+) {
+      max-height: 360px;
+    }
   }
 
   &__inner {
@@ -61,6 +65,7 @@
   &__heading {
     @include font-size(16px, 20px);
     color: $white;
+    margin-top: 0;
   }
 
   &__link {
